# lerning

./: .gitignore  README.md  pyproject.toml
schoo/Python中級/#1 Python によるエクセルファイル読み書き・操作を学ぶ/: excel_read1.py  excel_read2.py  write_excel1.py  write_excel2.py
schoo/Python中級/#1 Python によるエクセルファイル読み書き・操作を学ぶ/output/: sato_and_suzuki.xlsx  sato_overwork2.xlsx
schoo/Python中級/1_Python によるエクセルファイル読み書き・操作を学ぶ/: excel_read1.py  excel_read2.py  write_excel1.py  write_excel2.py
schoo/Python中級/1_Python によるエクセルファイル読み書き・操作を学ぶ/output/: sato_and_suzuki.xlsx  sato_overwork.xlsx
schoo/Python中級/1_課題/: exercise1.py
schoo/Python中級/1_課題/output/: output_file.xlsx
schoo/Python中級/2_課題/: exercise1.py
schoo/Python中級/2_課題/input/: 202202.xlsx  code1_excel.py
schoo/Python中級/2_課題/output/: 202202.xlsx  output2022.xlsx
schoo/Python中級/3_Matplotlib を用いたグラフ作成方法を学ぶ/: matplotlib_1.py  matplotlib_2.py  matplotlib_3.py  note.py  seaborn_1.py
schoo/Python中級/3_Matplotlib を用いたグラフ作成方法を学ぶ/input/: code3_matplotlib.py  code3_prepare.py  sales.csv  sales.xlsx
schoo/Python中級/3_課題/: exercise1.py
schoo/Python中級/4_SQLite を用いたデータベースへの保存・読み込みを学ぶ/: check_sqlite.py  note.py  note2.py  read_sqlite.py  scraping_sample.py  test_sql.py  write_sqlite.py
schoo/Python中級/4_SQLite を用いたデータベースへの保存・読み込みを学ぶ/DB/: code4_read_sqlite.py  (+1 more)
schoo/Python中級/4_課題/: exercise1.ipynb  exercise1.py  memo.ipynb
schoo/Python初級/: #1 Google Colaboratory を用いたプログラミングの基礎.ipynb  #2 変数の型と関数の作成.ipynb  #2 課題.ipynb  #3 課題.ipynb  #4 ライブラリと可視化ツール.ipynb  #4 課題.ipynb
youtube/oop-learning/: README.md  game.py  no_oop_pokemon.py  pokemon.py
(+10 files in other folders)
