[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.4.10",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
